--- a/de_portal_hoto_project/views/project_task_templates.xml
+++ b/de_portal_hoto_project/views/project_task_templates.xml
@@ -217,9 +217,9 @@
                         </t>
                         <h1 class="text-center"><i class="fa fa-check-circle fa-2x text-success" role="img" aria-label="Success" title="Success"/></h1>
                         <t t-if="leave">
-                            <h1 class="text-center">Your Leave Request Number is <a t-if="request.session.uid" t-attf-href="#{task.id}">#<span t-field="task.id"/></a><t t-if="not request.session.get('uid')">#<span t-field="leave.id"/></t>.</h1>
+                            <h1 class="text-center">Your Request Number is <a t-if="request.session.uid" t-attf-href="#{task.id}">#<span t-field="task.id"/></a><t t-if="not request.session.get('uid')">#<span t-field="leave.id"/></t>.</h1>
                         </t>
-                        <h1 class="text-center">Thank you for submitting your leave request!</h1>
+                        <h1 class="text-center">Thank you for submitting your request!</h1>
                     </div>
                 </div>
             </div>
@@ -332,13 +332,13 @@
                                      <div class="form-group col-12 s_website_form_field s_website_form_required" data-type="char" data-name="Field">
                                         <div class="row s_col_no_resize s_col_no_bgcolor">
                                             <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="date_onair">
-                                                <span class="s_website_form_label_content">On Air Date</span>
+                                                <span class="s_website_form_label_content">Handover Date</span>
                                                 <span class="s_website_form_mark"> *</span>
                                             </label>
                                             <div class="col-sm">
 
                                                 
-                                              <input type="date" class="form-control s_website_form_input" name="date_onair"  required="1"  />
+                                              <input type="date" class="form-control s_website_form_input" name="date_handover"  required="1"  />
 
                                             </div>
                                         </div>
